[package]
name = "hx711-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
nb = "1.0.0"
critical-section = "1.1.2"

[dev-dependencies]
embedded-hal-mock ={ version = "0.10.0"}